[package]
name = "account"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
frontbridge = { path = "../frontbridge" }
netcfg = { path = "../netcfg" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.0", features = ["rustls-tls"] }
log = "0.4"

base64 = "0.22.1"
cipher = "0.5.1"
rand = "0.10.1"
reqwest = { version = "0.13.3", features = ["json", "stream", "blocking", "rustls", "cookies", "query", "form"], default-features = false }
reqwest_cookie_store = "0.10.0"
sha1 = "0.11.0"
sha2 = "0.11.0"
url = "2.5.8"
md-5 = "0.11.0"
rc4 = "0.2.0"
aes = "0.9"
cbc = "0.2"
