[package]
name = "account"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
frontbridge = { path = "../frontbridge" }
netcfg = { path = "../netcfg" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.0", features = ["rustls-tls"] }
log = "0.4"

base64 = "0.22.1"
cipher = "0.4.0"
rand = "0.8.5"
reqwest = { version = "0.12.22", features = ["json", "stream", "blocking", "rustls-tls", "cookies"], default-features = false }
reqwest_cookie_store = "0.8.0"
sha1 = "0.10.6"
sha2 = "0.10.9"
url = "2.5.8"
md-5 = "0.10.6"
rc4 = "0.1.0"
aes = "0.8"
cbc = "0.1"
